@@ -5,6 +5,9 @@
     <version>3.9.0</version>
     <packaging>war</packaging>
     <name>DoujinSoft Store</name>
+    <properties>
+        <junit.platform.version>1.9.3</junit.platform.version>
+    </properties>
 
     <build>
         <sourceDirectory>src</sourceDirectory>
@@ -61,6 +64,9 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+<!--                        <configuration>-->
+<!--                            <propertyName>jacoco.argLine</propertyName>-->
+<!--                        </configuration>-->
                     </execution>
                     <!-- Generate JaCoCo coverage report after tests -->
                     <execution>
@@ -73,16 +79,25 @@
                 </executions>
             </plugin>
 
-            <!-- JUnit Tests During Maven Build -->
-            <!--            <plugin>-->
-            <!--                <artifactId>maven-surefire-plugin</artifactId>-->
-            <!--                <version>3.5.3</version>-->
-            <!--            </plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.3</version>
+            </plugin>
+            <!-- add this to test private methods,otherwise generate internal error-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.3</version>
+<!--                <version>&lt;!&ndash;...&ndash;&gt;</version>-->
+
+                <configuration>
+                    <argLine>
+                        @{argLine}
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
 
         </plugins>
@@ -174,6 +189,56 @@
             <version>4.8.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.stefanbirkner</groupId>
+            <artifactId>system-lambda</artifactId>
+            <version>1.2.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.stefanbirkner</groupId>
+            <artifactId>system-lambda</artifactId>
+            <version>1.2.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit-pioneer</groupId>
+            <artifactId>junit-pioneer</artifactId>
+            <version>2.3.0</version> <!-- Check for latest version -->
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit-pioneer</groupId>
+            <artifactId>junit-pioneer</artifactId>
+            <version>2.3.0</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>${junit.platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>${junit.platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.9.3</version>
+            <scope>compile</scope>
+        </dependency>
+
+<!--        <dependency> &lt;!&ndash; just for test rendering string &ndash;&gt;-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-simple</artifactId>-->
+<!--            <version>2.0.13</version>   &lt;!&ndash; 建议与 slf4j-api 版本一致 &ndash;&gt;-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
 
     </dependencies>
